# DropUp

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
gesturedrop/: __init__.py  __main__.py
gesturedrop/core/: __init__.py  content_manager.py  device_identity.py  discovery_service.py  gesture.py  gesture_controller.py  integrity.py  receiver_service.py  screenshot_service.py  sender_service.py
gesturedrop/ui/: __init__.py  toast_service.py
tests/: test_content_manager.py  test_discovery_service.py  test_integrity.py  test_receiver_service.py  test_sender_service.py
