[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesturedrop"
version = "0.1.0"
description = "Gesture-driven peer-to-peer file transfer"
requires-python = ">=3.11"
dependencies = [
    # Core — always required
    "pyperclip>=1.8.2",
    "Pillow>=10.0.0",
    "mss>=9.0.1",
    # Gesture / camera
    "opencv-python>=4.8.0",
    "mediapipe==0.10.8",
    # Toast notifications
    "plyer>=2.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-timeout>=2.2"]
headless = []   # no extra deps — camera group excluded

[tool.setuptools.packages.find]
where = ["."]
include = ["gesturedrop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
log_cli = true
log_cli_level = "INFO"
